--- a/Assignments/midterm/JSC370-Midterm.html
+++ b/Assignments/midterm/JSC370-Midterm.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Joey Hotz" />
 
-<meta name="date" content="2022-02-28" />
+<meta name="date" content="2022-03-07" />
 
 <title>Music Make You Lose Control</title>
 
@@ -156,7 +156,7 @@ pre code {
 <h1 class="title toc-ignore">Music Make You Lose Control</h1>
 <h3 class="subtitle">Examining the relationship between</h3>
 <h4 class="author">Joey Hotz</h4>
-<h4 class="date">February 28, 2022</h4>
+<h4 class="date">March 07, 2022</h4>
 
 </div>
 
@@ -198,6 +198,13 @@ pre code {
 ## #   `Ladder score in Dystopia` &lt;dbl&gt;, `Explained by: Log GDP per capita` &lt;dbl&gt;,
 ## #   `Explained by: Social support` &lt;dbl&gt;,
 ## #   `Explained by: Healthy life expectancy` &lt;dbl&gt;, ...</code></pre>
+<pre><code>## Warning: package &#39;rvest&#39; was built under R version 4.1.2</code></pre>
+<pre><code>## 
+## Attaching package: &#39;rvest&#39;</code></pre>
+<pre><code>## The following object is masked from &#39;package:readr&#39;:
+## 
+##     guess_encoding</code></pre>
+<pre><code>## hello</code></pre>
 </div>
 <div id="works-cited" class="section level1">
 <h1>Works Cited:</h1>
